--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ old_data
 code.bigfigs.ipynb
 code.dlc_anal.ipynb
 code.new_analysis.ipynb
+code/bigfigs.ipynb
+code/dlc_anal.ipynb
+code/new_analysis.ipynb
+mStim_Data
+Myriscool
+old
